--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
             </nav> -->
           <nav class="navbar navbar-expand-lg glass-morph navbar-dark">
             <a class="navbar-brand" href="#" id="main-logo">
-              <img src="./imagesnew/wiss24 png1.png" height="48" class="d-inline-block align-top" alt="" style="max-width: 50vw;"/>
+              <img src="./imagesnew/wiss24 png1.png" height="48" class="d-inline-block align-top" alt=""
+                style="max-width: 50vw;" />
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
               aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,17 +143,20 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
-                <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/about_us/">
-                  <span style="font-family: 'MyFont'; color: white">ABOUT US</span>
-                </a></li>
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/about_us/">
+                    <span style="font-family: 'MyFont'; color: white">ABOUT US</span>
+                  </a>
+                </li>
                 <li class="nav-item hidden">
-                <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/competitions/">
-                  <span style="font-family: 'MyFont'; color: white">COMPETITIONS</span>
-                </a></li>
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/competitions/">
+                    <span style="font-family: 'MyFont'; color: white">COMPETITIONS</span>
+                  </a>
+                </li>
                 <li class="nav-item hidden">
-                <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/reach_Us/">
-                  <span style="font-family: 'MyFont'; color: white">REACH US</span>
-                </a></li>
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/reach_Us/">
+                    <span style="font-family: 'MyFont'; color: white">REACH US</span>
+                  </a>
+                </li>
                 <li class="nav-item hidden">
                   <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/guests/">
                     <span style="font-family: 'MyFont'; color: white">GUESTS</span>
@@ -164,7 +168,8 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
-                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/index.html">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)"
+                    href="./pages/under-construction-template-master/index.html">
                     <span style="font-family: 'MyFont'; color: white">EXHIBITS</span>
                   </a>
                 </li>
@@ -174,7 +179,8 @@
                   </a>
                 </li>
                 <li class="nav-item hidden">
-                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/under-construction-template-master/index.html">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)"
+                    href="./pages/under-construction-template-master/index.html">
                     <span style="font-family: 'MyFont'; color: white">INITIATIVES</span>
                   </a>
                 </li>
@@ -191,6 +197,11 @@
                 <li class="nav-item hidden">
                   <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/sponsors/">
                     <span style="font-family: 'MyFont'; color: white">SPONSORS</span>
+                  </a>
+                </li>
+                <li class="nav-item hidden">
+                  <a class="navbar-brand" style="font-size: max(1.5vw, 1.75vh)" href="./pages/merch/">
+                    <span style="font-family: 'MyFont'; color: white">MERCH</span>
                   </a>
                 </li>
               </ul>
@@ -244,7 +255,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" style="font-size: 1vw" href="./pages/under-construction-template-master/index.html">
+              <a class="navbar-brand" style="font-size: 1vw"
+                href="./pages/under-construction-template-master/index.html">
                 <span style="font-family: 'MyFont'; color: white">EXHIBITS</span>
               </a>
             </li>
@@ -254,7 +266,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="navbar-brand" style="font-size: 1vw" href="./pages/under-construction-template-master/index.html">
+              <a class="navbar-brand" style="font-size: 1vw"
+                href="./pages/under-construction-template-master/index.html">
                 <span style="font-family: 'MyFont'; color: white">INITIATIVES</span>
               </a>
             </li>
@@ -276,6 +289,11 @@
             <li class="nav-item">
               <a class="navbar-brand" style="font-size: 1vw" href="./pages/reach_Us/index.html">
                 <span style="font-family: 'MyFont'; color: white">REACH US</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="navbar-brand" style="font-size: 1vw" href="./pages/merch/">
+                <span style="font-family: 'MyFont'; color: white">MERCHANDISE</span>
               </a>
             </li>
           </ul>
