--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -175,14 +175,21 @@
     <h2 class="title">Official media Partner</h2>
     <div class="flex">
       <img class="spns" src="./pics/odisha shines.jpg" alt="">
-      <img class="spns" src="./pics/bhubaneswarbuzz.jpg" alt="">
       <img class="spns" src="./pics/rourkela.jpg" alt="">
     </div>
   </div>
-  <!-- <div class="part">
+  <div class="part">
     <h2 class="title">Official social media Partner</h2>
-    <img class="spns" src="./pics/travel real odisha.jpg" alt="">
-  </div> -->
+    <div class="flex">
+      <img class="spns" src="./pics/bhubaneswarbuzz.jpg" alt="">
+      <img class="spns" src="./pics/travel_real_odisha-removebg-preview.png" alt="">
+      <img class="spns" src="./pics/bhubhaneswar wala vlog.jpg" alt="">
+    </div>
+  </div>
+  <div class="part">
+    <h2 class="title">Official coupon Partner</h2>
+    <img class="spns" src="./pics/puma.jpg" alt="" style="min-width: 30vw;background-color: white;padding: 20px;">
+  </div>
   <script src="../../js/script.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
