--- a/pages/sponsors/index.html
+++ b/pages/sponsors/index.html
@@ -76,22 +76,30 @@
   </h1>
   <div class="part">
     <h2 class="title">Title Sponsor</h2>
-    <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
+    <a href="https://odishaconstruction.com/">
+      <img class="spns" src="./pics/OCCL LOGO.jpg" alt="">
+    </a>
   </div>
   <div class="part">
     <h2 class="title">Diamond Sponsors</h2>
     <div class="flex"><!--
       <img class="spns" src="./pics/Pranyas.png" alt="">-->
-      <img class="spns" src="./pics/Ramco Cement English-Logo.png" alt="">
+      <a href="https://ramcocements.in/">
+        <img class="spns" src="./pics/Ramco Cement English-Logo.png" alt="">
+      </a>
     </div>
   </div>
   <div class="part">
     <h2 class="title">Gold Sponsors</h2>
     <div class="flex">
-      <img class="spns" src="./pics/DIC logo.png" alt="">
-      <img class="spns" src="./pics/OCAC_logo.jpeg" alt="">
-      <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;">
-      <img class="spns" src="./pics/applied materials blue bg 1_page-0001.jpg" alt="">
+      <a href="https://webapps.iitbbs.ac.in/dic/index.php">
+        <img class="spns" src="./pics/DIC logo.png" alt=""></a>
+      <a href="https://ocac.in/or">
+        <img class="spns" src="./pics/OCAC_logo.jpeg" alt=""></a>
+      <a href="https://startupodisha.gov.in/">
+        <img class="spns" src="./pics/Copy of Copy of logo.png" alt="" style="width: 500px;"></a>
+      <a href="https://www.appliedmaterials.com/">
+        <img class="spns" src="./pics/applied materials blue bg 1_page-0001.jpg" alt=""></a>
       <!-- HDFC LOGO-->
 
     </div>
@@ -99,28 +107,44 @@
   <div class="part">
     <h2 class="title">Silver Sponsors</h2>
     <div class="flex">
-      <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
-      <img class="spns" src="./pics/IBL Logo Burgundy Colour.jpg" alt="">
-      <img class="spns" src="./pics/jindal logo .png" style="background: white;padding: 20px;" alt="">
-
-      <!-- JINDAL STEEL AND POWER-->
+      <a href="https://omcltd.in/">
+        <img class="spns" src="./pics/OMC LOGO JPG.jpg" alt="">
+      </a>
+      <a href="https://www.indusind.com/in/en/personal.html">
+        <img class="spns" src="./pics/IBL Logo Burgundy Colour.jpg" alt="">
+      </a>
+      <a href="https://www.jindalsteelpower.com/">
+        <img class="spns" src="./pics/jindal logo .png" style="background: white;padding: 20px;" alt="">
+      </a><!-- JINDAL STEEL AND POWER-->
     </div>
   </div>
   <div class="part">
     <h2 class="title">Associate Sponsors</h2>
     <div class="flex">
-      <img class="spns" src="./pics/MSTC-logo.png" alt="">
+      <a href="https://www.mstcindia.co.in/">
+        <img class="spns" src="./pics/MSTC-logo.png" alt="">
+      </a>
       <img class="spns" src="./pics/Copy of IMFA LOGO_page-0001.jpg" alt="">
       <!-- <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
       <img class="spns" src="./pics/Apollo-247.jpg" alt=""> -->
-      <img class="spns" src="./pics/Apollo_logo.jpeg" alt="">
-      <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="" style="aspect-ratio: 1/1 !important;">
-      <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt=""
-        style="width:500px;max-width: 80vw;align-self: 1/5;">
-      <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
-      <img class="spns" src="./pics/Optcl logo-Final-revised - 2012 - Colour.jpg" alt="">
-      <img class="spns" src="./pics/secuodsoft.png" style="background: white;padding: 20px;" alt="">
-      <!-- SECUODSOFT-->
+      <a href="https://www.apollohospitals.com/corporate/company-overview/">
+        <img class="spns" src="./pics/Apollo_logo.jpeg" alt="">
+      </a>
+      <a href="https://ucobank.com/en/">
+        <img class="spns" src="./pics/Copy of UCO BANK LOGO.jpg" alt="" style="aspect-ratio: 1/1 !important;">
+      </a>
+      <a href="https://www.icicibank.com/">
+        <img class="spns" src="./pics/2560px-ICICI_Bank_Logo.svg.jpg" alt=""
+          style="width:500px;max-width: 80vw;align-self: 1/5;"></a>
+      <a href="https://www.idco.in/">
+        <img class="spns" src="./pics/Copy of Display Logo_IDCO_New_page-0001.jpg" alt="">
+      </a>
+      <a href="https://www.optcl.co.in/">
+        <img class="spns" src="./pics/Optcl logo-Final-revised - 2012 - Colour.jpg" alt="">
+      </a>
+      <a href="https://secuodsoft.com/">
+        <img class="spns" src="./pics/secuodsoft.png" style="background: white;padding: 20px;" alt="">
+      </a><!-- SECUODSOFT-->
     </div>
   </div>
 
@@ -137,18 +161,24 @@
   </div>
   <div class="part">
     <h2 class="title"> Official Social Impact Partner</h2>
-    <img class="spns" src="./pics/Pranyas.png" alt="">
+    <a href="https://pranyas.org/">
+      <img class="spns" src="./pics/Pranyas.png" alt="">
+    </a>
   </div>
   <div class="part">
     <h2 class="title">Official Pharmaceutical partner</h2>
     <div class="flex">
-      <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
-      <img class="spns" src="./pics/Apollo-247.jpg" alt="">
+      <a href="https://www.apollopharmacy.in/">
+        <img class="spns" src="./pics/Apollo Pharmacy_jpeg.jpg" alt="">
+        <img class="spns" src="./pics/Apollo-247.jpg" alt="">
+      </a>
     </div>
   </div>
   <div class="part">
     <h2 class="title">Official Health Partner</h2>
+    <a href="https://www.amrihospitals.in/">
     <img class="spns" src="./pics/images.jpg" alt="">
+  </a>
   </div>
   <div class="part">
     <h2 class="title">Official Robotics Partner</h2>
